[package]
name = "sniffer_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.117"
serde = { version = "1.0.203", features = ["derive"] }
pnet = { version = "0.35.0", features = ["serde", "std"] }
log = "0.4.21"
httparse = "1.8.0"
mime = "0.3.17"
flate2 = "1.0.30"
encoding_rs = "0.8.34"
tls-parser =  { version = "0.11.0", features = ["serialize"]}
x509-parser = "0.16.0"
dns-parser = "0.8.0"
simple-dns = "0.7.0"

[features]
utils = []
